# earthwise

./: .gitignore  plan.md
earthwise-app/: index.html  package-lock.json  package.json
earthwise-app/src/: App.tsx  index.css  main.tsx
earthwise-app/src/components/: BoringMap.tsx  ChatButton.tsx  EmptyState.tsx  ErrorBoundary.tsx  FeedbackPopup.tsx  FileUpload.tsx  Header.tsx  Sidebar.tsx  SkeletonLoader.tsx  ThemeToggle.tsx  UploadLimitWall.tsx  UsageBanner.tsx
earthwise-app/src/components/landing/: FeaturesSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  LandingFooter.tsx  WaitlistSection.tsx
earthwise-app/src/config/: index.ts
earthwise-app/src/context/: ThemeContext.tsx
earthwise-app/src/layouts/: MainLayout.tsx
earthwise-app/src/mock-data/: geotech_report1.json  geotech_report2.json  geotech_report3.json  geotech_report4.json
earthwise-app/src/pages/: BoreLogsPage.tsx  ChatPage.tsx  DashboardPage.tsx  LandingPage.tsx  ProjectsPage.tsx  RecommendationsPage.tsx  RiskFlagsPage.tsx  SettingsPage.tsx
earthwise-app/src/services/: index.ts
earthwise-app/src/store/: index.ts
earthwise-app/src/types/: index.ts
earthwise-app/src/utils/: session.ts
earthwise-backend/: .env.example  pyproject.toml
earthwise-backend/src/: chat.py  config.py  database.py  main.py  models.py  schemas.py
earthwise-backend/src/pipeline/: build_output.py  ingest.py  llm_extract.py  normalize.py  orchestrator.py  section_detect.py  table_extract.py  text_extract.py
earthwise-backend/src/prompts/: borings.py  metadata.py  recommendations.py  risk_flags.py
