[project]
name = "earthwise-backend"
version = "0.1.0"
description = "Geotech PDF ingestion and parsing pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.25.0",
    "pytesseract>=0.3.13",
    "openai>=1.60.0",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
